--- a/ADSBOLA1.html
+++ b/ADSBOLA1.html
@@ -17,7 +17,7 @@
     <title>Yang Lagi Hits 2024</title>
     <style>
       body {
-        background-color:black;
+        background-color:white;
         background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
