--- a/regis-vvip.html
+++ b/regis-vvip.html
@@ -634,8 +634,6 @@ src="https://www.facebook.com/tr?id=390817510390478&ev=PageView&noscript=1"
         </div>
       </div>
       <footer class="footer mt-auto py-3 text-center">
-        <small><a href="#" data-toggle="modal" data-target="#policy">Privacy Policy</a></small><br>
-        <span>
             <!-- Start Fireworks --> 
 <style> 
     .fireworks-container { 
@@ -700,21 +698,4 @@ src="https://www.facebook.com/tr?id=390817510390478&ev=PageView&noscript=1"
 </div>
 <!-- end snowflake -->
 <style> 
-<!-- End Fireworks -->
-            
-          <span id="year" class="mr-2"></span></span>ALL RIGHTS RESERVED</span
-        >
-      </footer>
-    </main>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script>
-      const date = new Date();
-      document.getElementById('year').innerText = date.getFullYear();
-    </script>
-    <script src="./code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="./stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js"></script>
-  </body>
-</html>
-</style></span></footer></main></body></html>
+<!-- End Fireworks --
