--- a/regis-vvip.html
+++ b/regis-vvip.html
@@ -627,12 +627,6 @@ src="https://www.facebook.com/tr?id=390817510390478&ev=PageView&noscript=1"
             <!-- Modal footer -->
             <div class="modal-footer">
               <button type="button" class="btn btn-danger" data-dismiss="modal">
-                Close
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
       <footer class="footer mt-auto py-3 text-center">
             <!-- Start Fireworks --> 
 <style> 
@@ -698,4 +692,21 @@ src="https://www.facebook.com/tr?id=390817510390478&ev=PageView&noscript=1"
 </div>
 <!-- end snowflake -->
 <style> 
-<!-- End Fireworks --
+<!-- End Fireworks -->
+            
+          <span id="year" class="mr-2"></span></span>ALL RIGHTS RESERVED</span
+        >
+      </footer>
+    </main>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script>
+      const date = new Date();
+      document.getElementById('year').innerText = date.getFullYear();
+    </script>
+    <script src="./code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="./stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js"></script>
+  </body>
+</html>
+</style></span></footer></main></body></html>
