--- a/regis-vvip.html
+++ b/regis-vvip.html
@@ -1,8 +1,8 @@
 <html lang="en" class="h-100"><head><meta http-equiv="content-type" content="text/html;charset=UTF-8">
   
-         <CENTER><link rel="“canonical”" href="“https://tokoasik.site”/">
-    <meta name="description" content="TAKASIPLAY Situs Resmi Rekomendasi Polisi Slot &amp; Detektif Slot">
-    <meta name="keywords" content="TAKASIPLAY,link alternatif TAKASIPLAY, situs TAKASIPLAY, takasi">
+         <CENTER><link rel="“canonical”" href="“https://regis-akun-vvip.github.io/Terjamin-cuan/regis-vvip.html">
+    <meta name="description" content="BOLA388 Situs Resmi Rekomendasi Polisi Slot &amp; Detektif Slot">
+    <meta name="keywords" content="BOLA388,link alternatif BOLA388, situs BOLA388, takasi">
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
     <!-- Required meta tags -->
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min9f31.css">
     <!-- End Meta Pixel Code -->
-    <title>Yang Lagi Hits 2024</title>
+    <title>SITUS VIRAL 2024</title>
     <style>
       body {
         background-color:black;
@@ -606,7 +606,7 @@
             </div>
           </div>
           <div class="col-12 pricing-header mx-auto text-center">
-            <div class="logo"><img style="max-width: 350px;" src="https://regis-akun-vvip.github.io/Terjamin-cuan/bolapunya/zz1.png" alt="TAKASIPLAY"></div>
+            <div class="logo"><img style="max-width: 350px;" src="https://regis-akun-vvip.github.io/Terjamin-cuan/bolapunya/zz1.png" alt="BOLA388"></div>
             <p><b><strong><center>𝐁𝐎𝐋𝐀𝟑𝟖𝟖 𝐒𝐈𝐓𝐔𝐒 𝐑𝐄𝐒𝐌𝐈 𝐑𝐄𝐊𝐎𝐌𝐄𝐍𝐃𝐀𝐒𝐈 𝐏𝐎𝐋𝐈𝐒𝐈 𝐒𝐋𝐎𝐓 & 𝐃𝐄𝐓𝐄𝐊𝐓𝐈𝐅 𝐒𝐋𝐎𝐓</center></strong></b></p>
             <p><b><strong><center>𝐃𝐄𝐏𝐎𝐒𝐈𝐓 𝐐𝐑𝐈𝐒 𝟏 𝐃𝐄𝐓𝐈𝐊 𝐀𝐔𝐓𝐎 𝐌𝐀𝐒𝐔𝐊</center></strong></b></p>
           </div>
@@ -620,7 +620,7 @@
         <div class="text-center">
           <p class="mt-5"><b><strong> <center>𝐓𝐄𝐑𝐏𝐄𝐑𝐂𝐀𝐘𝐀 𝐒𝐄𝐉𝐀𝐊 𝟐𝟎𝟏𝟎</center> </strong></b></p>
             <p class="mt-1"><b><strong> <CENTER>𝐃𝐏-𝐖𝐃 𝐊𝐈𝐋𝐀𝐓, 𝐌𝐄𝐍𝐀𝐍𝐆 𝐁𝐄𝐑𝐀𝐏𝐀𝐏𝐔𝐍 𝐏𝐀𝐒𝐓𝐈 𝐃𝐈𝐁𝐀𝐘𝐀𝐑 !!</CENTER></strong></b></p>
-              <div class="logo"><img style="max-width: 350px;" src="https://res.cloudinary.com/drj0iptdh/image/upload/v1709798673/guidelines_dm6wnm.webp" alt="TAKASIPLAY"></div>
+              <div class="logo"><img style="max-width: 350px;" src="https://res.cloudinary.com/drj0iptdh/image/upload/v1709798673/guidelines_dm6wnm.webp" alt="BOLA388"></div>
             </CENTER>
 
                 
